--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                     <ul>
                         <div class="container-navigation">
 
-                            <li><a href="#flexz">1.FlexGrow</a></li>
-                            <li><a href="#centerz">2.CenterItem</a></li>
-                            <li><a href="#videoz">3.Video</a></li>
-                            <li class="push"><a href="#audioz">4.Audio</a></li>
-                            <li><a href="#mediaz">5.Media</a></li>
+                            <button><a href="#flexz">1.FlexGrow</a></button>
+                            <button><a href="#centerz">2.CenterItem</a></button>
+                            <button><a href="#videoz">3.Video</a></button>
+                            <button class="push"><a href="#audioz">4.Audio</a></button>
+                            <button><a href="#mediaz">5.Media</a></button>
 
                         </div>
                     </ul> 
@@ -100,5 +100,9 @@
         
 
         </main> 
+
+        <footer>
+            <p>This website is brought to you by the letter F, B, and the number 42. It was made by Jack Morgan.</p>
+        </footer>
 </body>
 </html>
