--- a/button.html
+++ b/button.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://use.typekit.net/fgw6ktg.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,7 +35,10 @@
  
  
         <main>
-            
+            <section class=" button-one section">
+                <img class="button-top-img" src="http://www.placekitten.com/800/800">
+
+            </section>
         </main> 
 
         <footer>
